Removed redundant primitive boxing.  https://github.com/shannah/Java-Objective-C-Bridge/issues/29